# Widgets

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/helpdialogs/: CMakeLists.txt  SimpleText.md  main.cpp  mainwindow.ui  qmarkdowntextedit
examples/src/: config.cpp  config.h  mainwindow.h
include/single/: qsinglemainwindow.h
include/widgets/: colordialog.h  extendedcolordialog.h  isettingspage.h
src/single/: qsinglemainwindow.cpp
src/translate/: CMakeLists.txt
src/widgets/: CMakeLists.txt  colordialog.cpp  icons.qrc  isettingspage.cpp  settingsdialog.cpp  settingsdialog.h
src/widgets/icons/: html.xcf  htmldrag.xcf  textdrag.xcf
